add scheduling priority
